Fixed with Flex
Fixed the content of the divs coming outside the divs with flex boxes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name">.TroyAWilson <span class ="subName"> { Web Developer; } </span> </li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#ExperienceBox">Experience</a></li>
+          <li><a href="#expHeader">Experience</a></li>
         </ul>
     </div>
 
@@ -48,32 +48,13 @@
     </main>
 
 
-    <!-- <section id = "currentBox" class = "clearfix">
-        <h2>Current profiencies</h2>
-        <div class ="currentContainer">
-          <a href ="#"><img class ="current" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Work1</a></h3>
-          <p class ="ExperienceText">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-        </div>
 
-        <div class ="currentContainer">
-          <a href ="#"><img class ="current" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Work1</a></h3>
-          <p class ="ExperienceText">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-        </div>
-
-        <div class ="currentContainer">
-          <a href ="#"><img class ="current" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Work1</a></h3>
-          <p class ="ExperienceText">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</p>
-        </div>
-    </section> -->
 <!-- Not alot to display in experience yet so this is primarily just placeholder for when I have experience  -->
 
-    <section id = "ExperienceBox" class = "clearfix">
-        <h2>Experience</h2>
+    <section id="ExperienceBox" class="clearfix">
+        <h2 id ="expHeader">Experience</h2>
 
-        <div class ="expContainer">
+        <div class ="expContainer ">
           <a href ="#"><img class ="Experience" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
           <h3><a class ="ExperienceLink" href ="#">Alisia Makeup</a></h3>
 
