Updating experience section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h2 id ="expHeader">Experience</h2>
 
         <div class ="expContainer ">
-          <a href ="#"><img class ="Experience" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Alisia Makeup</a></h3>
+          <a href ="#"><img class ="Experience" src ="images\Tech2head.PNG"></a>
+          <h3><a class ="ExperienceLink" href ="#">Student Portfolio</a></h3>
 
           <p class ="ExperienceText">"Lorem ipsum dolor sit
              amet, consectetur adipiscing elit, sed do
@@ -73,8 +73,8 @@
         </div>
 
         <div class ="expContainer">
-          <a href ="#"><img class ="Experience" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Work2</a></h3>
+          <a href ="#"><img class ="Experience" src ="images\Cookinmama.PNG" alt ="Placeholder image for upcoming project"></a>
+          <h3><a class ="ExperienceLink" href ="#">Cookin' Mama</a></h3>
 
           <p class ="ExperienceText">"Lorem ipsum dolor sit
              amet, consectetur adipiscing elit, sed do
@@ -92,8 +92,8 @@
         </div>
 
         <div class ="expContainer">
-          <a href ="#"><img class ="Experience" src ="https://placeimg.com/960/480/people" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Work3</a></h3>
+          <a href ="#"><img class ="Experience" src ="images\Codereview.PNG" alt ="Placeholder image for upcoming project"></a>
+          <h3><a class ="ExperienceLink" href ="#">Code Review: A newsletter</a></h3>
 
           <p class ="ExperienceText">"Lorem ipsum dolor sit
              amet, consectetur adipiscing elit, sed do
