--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Troy A Wilson, Web Dev</title>
+  <title>Troy A Wilson - Front-end Web Developer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
   <body>
     <div class="main-nav">
         <ul class="nav">
           <li class="name">.TroyAWilson <span class ="subName"> { Web Developer; } </span> </li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#expHeader">Experience</a></li>
+          <li><a href="#expHeader">About</a></li>
+          <li><a href="#expHeader">Portfolio</a></li>
+          <li><a href="#expHeader">Servcies</a></li>
+          <li><a href="#expHeader">Pricing</a></li>
+          <li><a href="#expHeader">Contact</a></li>
         </ul>
     </div>
 
