Start of redesign
Added Sass files
currently restructuring the HTML

--- a/index.html
+++ b/index.html
@@ -4,124 +4,39 @@
   <meta charset="utf-8">
   <title>Troy A Wilson - Front-end Web Developer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
-  <body>
+
+<body>
+  <header>
     <div class="main-nav">
+      <h2 class="name">Troy A Wilson</h2>
         <ul class="nav">
-          <li class="name">.TroyAWilson <span class ="subName"> { Web Developer; } </span> </li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#expHeader">About</a></li>
-          <li><a href="#expHeader">Portfolio</a></li>
-          <li><a href="#expHeader">Servcies</a></li>
-          <li><a href="#expHeader">Pricing</a></li>
-          <li><a href="#expHeader">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Servcies">Servcies</a></li>
+          <li><a href="#Pricing">Pricing</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
     </div>
+  </header>
+    <div>
+      <h3>Front-end Web Developer</h3>
+      <span>I DO </span> <!-- HTML5, CSS3, Javascript, React, Design, etc -->
+      <p>Based in the San Francisco bay area, I specialize in Custom Front-end Development and Design</p>
+      <button><span>Learn More</span></button>
+      <button><span>I need a website</span></button>
+    </div>
 
-    <header>
-      <img src="images/Troy_Wilson.jpg" alt="Photo of Troy Wilson" class="profile-image">
-      <h1 class="tag name">  Troy A. Wilson   </h1>
-      <p class="tag location">My home is Napa,California.</p>
-    </header>
-
-    <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've worked in lots of different jobs and I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional lifegaurd and barista and am a life-long learner who's always interested in expanding my skills.</p>
-      </div>
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>jQuery</li>
-          <li>Python</li>
-          <li>Ruby</li>
-          <li>Rails</li>
-          <li>Bootstrap</li>
-          <li>Wordpress</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
-    </main>
-
-
-
-<!-- Not alot to display in experience yet so this is primarily just placeholder for when I have experience  -->
-
-    <section id="ExperienceBox" class="clearfix">
-        <h2 id ="expHeader">Experience</h2>
-
-        <div class ="expContainer ">
-          <a href ="#"><img class ="Experience" src ="images\Tech2head.PNG"></a>
-          <h3><a class ="ExperienceLink" href ="#">Student Portfolio</a></h3>
-
-          <p class ="ExperienceText">"Lorem ipsum dolor sit
-             amet, consectetur adipiscing elit, sed do
-             eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam, quis
-             nostrud exercitation ullamco laboris nisi ut
-             aliquip ex ea commodo consequat. Duis aute
-             irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla
-              pariatur. Excepteur sint occaecat cupidatat
-              non proident, sunt in culpa qui officia
-              deserunt mollit anim id
-            </p>
-        </div>
-
-        <div class ="expContainer">
-          <a href ="#"><img class ="Experience" src ="images\Cookinmama.PNG" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Cookin' Mama</a></h3>
-
-          <p class ="ExperienceText">"Lorem ipsum dolor sit
-             amet, consectetur adipiscing elit, sed do
-             eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam,
-             quis nostrud exercitation ullamco laboris
-             nisi ut aliquip ex ea commodo consequat.
-             Duis aute irure dolor in reprehenderit
-             in voluptate velit esse cillum dolore eu
-             fugiat nulla pariatur. Excepteur sint
-             occaecat cupidatat non proident, sunt
-             in culpa qui officia deserunt mollit
-             anim id
-           </p>
-        </div>
-
-        <div class ="expContainer">
-          <a href ="#"><img class ="Experience" src ="images\Codereview.PNG" alt ="Placeholder image for upcoming project"></a>
-          <h3><a class ="ExperienceLink" href ="#">Code Review: A newsletter</a></h3>
-
-          <p class ="ExperienceText">"Lorem ipsum dolor sit
-             amet, consectetur adipiscing elit, sed do
-             eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam, quis
-             nostrud exercitation ullamco laboris nisi ut
-             aliquip ex ea commodo consequat. Duis aute
-             irure dolor in reprehenderit in voluptate
-             velit esse cillum dolore eu fugiat nulla
-             pariatur. Excepteur sint occaecat cupidatat
-             non proident, sunt in culpa qui officia
-             deserunt mollit anim id
-           </p>
-
-        </div>
-    </section>
-
-    <footer>
-      <ul>
+  <footer class ="mainFooter">
+      <ul class ="nav">
         <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2018, Troy A Wilson</p>
     </footer>
-  </body>
-  </html>
+</body>
+</html>
