Complete site redesign

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
+  <div class ="main-container">
   <header>
     <div class="main-nav">
-      <h2 class="name">Troy A Wilson</h2>
+      <!-- <img src ="https://placeimg.com/50/50/nature"> -->
+      <h2 class="name">Troy <span class = "pinkText">A</span> Wilson</h2>
         <ul class="nav">
-          <li><a href="#">Home</a></li>
+          <li><a class ="pinkText" href="#">Home</a></li>
           <li><a href="#About">About</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Servcies">Servcies</a></li>
@@ -22,21 +24,236 @@
         </ul>
     </div>
   </header>
-    <div>
-      <h3>Front-end Web Developer</h3>
-      <span>I DO </span> <!-- HTML5, CSS3, Javascript, React, Design, etc -->
-      <p>Based in the San Francisco bay area, I specialize in Custom Front-end Development and Design</p>
-      <button><span>Learn More</span></button>
-      <button><span>I need a website</span></button>
+    <div class = "introPiece">
+      <h3 class ="intro-title">Front-end Web Developer & Designer</h3>
+      <span class="intro-span">I DO </span> <!-- HTML5, CSS3, Javascript, React, Design, etc -->
+      <!-- <img src ="images/html.png">
+      <img src ="images/css3.png">
+      <img src ="images/js.png"> -->
+      <p class="intro-p">Based in the San Francisco bay area, I specialize in Custom Front-end Development and Design</p>
+      <button class ="intro-button"><span>Learn More</span></button>
+      <button class ="intro-button"><span>I need a website</span></button>
     </div>
 
+    <div id ="About">
+      <div class ="about-conatiner container">
+        <div class ="about-goals-skills">
+      <div class ="about-info">
+        <h4>My Goals</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit </p>
+      </div>
+
+      <div class ="skills">
+        <h4>My Skills</h4>
+        <span>HTML5</span>
+        <span>CSS3</span>
+        <span>Javascript</span>
+        <span>React?</span>
+      </div>
+    </div>
+      <div class ="whatIdo">
+
+        <div class ="skills-development">
+          <img src ="https://placeimg.com/50/50/animals">
+          <h6>Development</h6>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class ="skills-design">
+          <img src ="https://placeimg.com/50/50/animals">
+          <h6>Design</h6>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class ="?">
+
+        </div>
+      </div>
+    </div>
+    </div>
+<!-- End about section -->
+
+
+  <div id ="Portfolio">
+
+    <div class ="portfolio-container container">
+
+        <h4>My Portfolio</h4>
+
+        <div class ="project">
+          <img src ="https://placeimg.com/350/350/tech/sepia">
+          <h6>Project1</h6>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+
+        <div class ="project">
+          <img src ="https://placeimg.com/350/350/people/grayscale">
+          <h6>Project2</h6>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+
+        <div class ="project">
+          <img src ="https://placeimg.com/350/350/nature">
+          <h6>Project3</h6>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+
+        <div class ="project">
+          <img src ="https://placeimg.com/350/350/arch/sepia">
+          <h6>Project4</h6>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+
+        <div class ="project">
+          <img src ="https://placeimg.com/350/350/animals/sepia">
+          <h6>Project5</h6>
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+
+      </div>
+    </div>
+    <!-- End Portfolio section -->
+
+    <div id = "Services">
+      <div class ="services-container container">
+        <div class ="myServices left">
+          <h4>My Servcies</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+        </div>
+
+        <div class="myServices right">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+        </div>
+
+        <div class ="services-development services-flex">
+          <img src ="https://placeimg.com/50/50/tech">
+          <p><span class ="pinkText">W</span>eb development</p>
+        </div>
+
+        <div class ="services-design services-flex">
+          <img src ="https://placeimg.com/50/50/tech">
+          <p><span class ="pinkText">W</span>eb design</p>
+        </div>
+
+        <div class ="services-wordpress services-flex">
+          <img src ="https://placeimg.com/50/50/tech">
+          <p><span class ="pinkText">W</span>ordpress</p>
+        </div>
+      </div>
+    </div>
+    <!-- end services section -->
+
+    <div class ="breakImage">
+      <img src ="https://loremflickr.com/1200/500">
+    </div>
+
+    <div id = "Pricing">
+      <div class = "pricing-container container">
+      <div class ="Pricing-box-container">
+        <h4>Web Development</h4>
+        <h3>$Number$</h3>
+        <span>per hour</span>
+        <ul>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <button class ="pricing-button"><span>Get a quote</span></button>
+      </div>
+
+      <div class ="Pricing-box-container">
+        <h4>Web Design</h4>
+        <h3>$Number$</h3>
+        <span>per hour</span>
+        <ul>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <button class ="pricing-button"><span>Get a quote</span></button>
+      </div>
+
+      <div class ="Pricing-box-container">
+        <h4>Wordpress</h4>
+        <h3>$Number$</h3>
+        <span>per hour</span>
+        <ul>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+          <li>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <button class ="pricing-button"><span>Get a quote</span></button>
+      </div>
+    </div>
+    </div>
+    <!-- end pricing section -->
+
+    <div id = "Contact">
+      <div class ="contact-container container">
+      <div class ="contact-info">
+        <div class ="contact-item">
+          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
+          <h6>Phone:</h6>
+          <p>420 123 4567</p>
+        </div>
+
+        <div class ="contact-item">
+          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
+          <h6>Address:</h6>
+          <p>69 CodeGang - Code Street 69/789
+
+            3rd Avenue, Upper Lower Side, California</p>
+        </div>
+
+        <div class ="contact-item">
+          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
+          <h6>Email:</h6>
+          <p>contact@TroyAwilson.com</p>
+        </div>
+      </div>
+
+      <div class ="contact-form">
+        <h4>Want To Hire Me?</h4>
+        <form>
+          <div class ="form-input">
+            <label for ="">Name:</label>
+            <input type ="text">
+          </div>
+
+          <div class ="form-input">
+            <label for ="">Email:</label>
+            <input type ="email">
+          </div>
+
+          <div class ="form-input">
+            <label for ="">Subject:</label>
+            <input type ="text">
+          </div>
+
+          <div class ="form-input">
+            <label for ="">Message:</label>
+            <textarea>
+            </textarea>
+          </div>
+        </form>
+      </div>
+    </div>
+    </div>
+    <!-- end contact section -->
+
   <footer class ="mainFooter">
-      <ul class ="nav">
+
+      <img src ="https://placeimg.com/50/50/nature">
+
+      <ul class ="footer-nav">
         <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2018, Troy A Wilson</p>
+      <p class="copyright">Copyright 2018, Troy <span class ="pinkText">A</span> Wilson</p>
     </footer>
+</div>
 </body>
 </html>
