--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <li><a href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2018, Troy <span class ="pinkText">A</span> Wilson</p>
+      <p class="copyright">&copy 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
     </footer>
 </div>
 </body>
