--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div class ="main-container">
   <header>
     <div class="main-nav">
-      <!-- <img src ="https://placeimg.com/50/50/nature"> -->
       <h2 class="name">Troy <span class = "pinkText">A</span> Wilson</h2>
         <ul class="nav">
           <li><a class ="pinkText" href="#">Home</a></li>
@@ -25,14 +24,17 @@
     </div>
   </header>
     <div class = "introPiece">
+      <!-- Idea: For the background, a dark navy/purple with animated pixelated clouds. Interactive? -->
       <h3 class ="intro-title">Front-end Web Developer & Designer</h3>
       <span class="intro-span">I DO </span> <!-- HTML5, CSS3, Javascript, React, Design, etc -->
-      <!-- <img src ="images/html.png">
-      <img src ="images/css3.png">
-      <img src ="images/js.png"> -->
+      <br>
+      <img src ="images\html-5 (2).svg">
+      <img src ="images\css-3.svg">
+      <img class ="test" src ="images\java-script.svg">
+      <!-- Animated icons for HTML CSS Javascript, etc using keyframes and SVGs -->
       <p class="intro-p">Based in the San Francisco bay area, I specialize in Custom Front-end Development and Design</p>
-      <button class ="intro-button"><span>Learn More</span></button>
-      <button class ="intro-button"><span>I need a website</span></button>
+      <a href ="#About"><span class ="intro-button"><span>Learn More</span></span></a>
+      <a href ="#Contact"><span class ="intro-button"><span>I need a website</span></span></a>
     </div>
 
     <div id ="About">
@@ -40,7 +42,7 @@
         <div class ="about-goals-skills">
       <div class ="about-info">
         <h4>My Goals</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit </p>
+        <p class ="indent">I am a front-end web developer with skills in HTML, CSS, Javascript, and jQuery, Skills I'm currently working on are AJAX and ReactJS. I'm passionate about learning and growing my skill set to improve myself as a developer.While development is where I feel I truly shine I also have an interest in design with skills in Photoshop and wireframing. </p>
       </div>
 
       <div class ="skills">
@@ -54,12 +56,12 @@
       <div class ="whatIdo">
 
         <div class ="skills-development">
-          <img src ="https://placeimg.com/50/50/animals">
+          <img src ="images\programming.svg" width ="50px">
           <h6>Development</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class ="skills-design">
-          <img src ="https://placeimg.com/50/50/animals">
+          <img src ="images\computer-graphic.svg" width ="50px">
           <h6>Design</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
@@ -81,19 +83,19 @@
 
         <div class ="project">
           <img src ="https://placeimg.com/350/350/tech/sepia">
-          <h6>Project1</h6>
+          <h6>Game Show App</h6>
           <p>Lorem ipsum dolor sit amet</p>
         </div>
 
         <div class ="project">
           <img src ="https://placeimg.com/350/350/people/grayscale">
-          <h6>Project2</h6>
+          <h6>Dynamic Video Player</h6>
           <p>Lorem ipsum dolor sit amet</p>
         </div>
 
         <div class ="project">
           <img src ="https://placeimg.com/350/350/nature">
-          <h6>Project3</h6>
+          <h6>Interactive Photo Gallery</h6>
           <p>Lorem ipsum dolor sit amet</p>
         </div>
 
@@ -117,25 +119,25 @@
       <div class ="services-container container">
         <div class ="myServices left">
           <h4>My Servcies</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+          <p class ="indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
         </div>
 
         <div class="myServices right">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+          <p class ="indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
         </div>
 
         <div class ="services-development services-flex">
-          <img src ="https://placeimg.com/50/50/tech">
+          <img src ="images\programming.svg" width ="50px">
           <p><span class ="pinkText">W</span>eb development</p>
         </div>
 
         <div class ="services-design services-flex">
-          <img src ="https://placeimg.com/50/50/tech">
+          <img src ="images\computer-graphic.svg" width ="50px">
           <p><span class ="pinkText">W</span>eb design</p>
         </div>
 
         <div class ="services-wordpress services-flex">
-          <img src ="https://placeimg.com/50/50/tech">
+          <img src ="images\wordpress-logo-of-a-letter-in-a-circle.svg" width ="50px">
           <p><span class ="pinkText">W</span>ordpress</p>
         </div>
       </div>
@@ -158,7 +160,7 @@
           <li>Lorem ipsum dolor sit amet</li>
           <li>Lorem ipsum dolor sit amet</li>
         </ul>
-        <button class ="pricing-button"><span>Get a quote</span></button>
+        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
 
       <div class ="Pricing-box-container">
@@ -171,7 +173,7 @@
           <li>Lorem ipsum dolor sit amet</li>
           <li>Lorem ipsum dolor sit amet</li>
         </ul>
-        <button class ="pricing-button"><span>Get a quote</span></button>
+        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
 
       <div class ="Pricing-box-container">
@@ -184,7 +186,7 @@
           <li>Lorem ipsum dolor sit amet</li>
           <li>Lorem ipsum dolor sit amet</li>
         </ul>
-        <button class ="pricing-button"><span>Get a quote</span></button>
+        <a href ="#"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
     </div>
     </div>
@@ -194,28 +196,34 @@
       <div class ="contact-container container">
       <div class ="contact-info">
         <div class ="contact-item">
-          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
-          <h6>Phone:</h6>
-          <p>420 123 4567</p>
+          <img class="contact-icon contact-phone" src ="images/call.svg" width ="20px" height ="20px">
+          <div class ="contact-phone-number">
+            <h6>Phone:</h6>
+            <p>(707)-712-1542</p>
+          </div>
         </div>
 
         <div class ="contact-item">
-          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
-          <h6>Address:</h6>
-          <p>69 CodeGang - Code Street 69/789
-
-            3rd Avenue, Upper Lower Side, California</p>
+          <img class="contact-icon contact-house" src ="images\home-icon-silhouette.svg" width ="20px" height ="20px">
+          <div class ="contact-Address">
+            <h6>Address:</h6>
+            <p>
+              <!-- 1676, Milton Rd, -->
+               Napa, California 94559</p>
+          </div>
         </div>
 
         <div class ="contact-item">
-          <!-- <img src ="https://placeimg.com/50/50/nature"> -->
-          <h6>Email:</h6>
-          <p>contact@TroyAwilson.com</p>
+          <img class="contact-icon contact-mail" src ="images\black-back-closed-envelope-shape.svg" width ="20px" height ="20px">
+          <div class ="contact-email">
+            <h6>Email:</h6>
+            <p>Troyaustynwilson@gmail.com</p>
+          </div>
         </div>
       </div>
 
       <div class ="contact-form">
-        <h4>Want To Hire Me?</h4>
+        <h4>Want <br> To Hire Me?</h4>
         <form>
           <div class ="form-input">
             <label for ="">Name:</label>
@@ -236,6 +244,7 @@
             <label for ="">Message:</label>
             <textarea>
             </textarea>
+            <button class="contact-submit-button">Submit</button>
           </div>
         </form>
       </div>
@@ -245,7 +254,7 @@
 
   <footer class ="mainFooter">
 
-      <img src ="https://placeimg.com/50/50/nature">
+      <img src ="images\startup.svg">
 
       <ul class ="footer-nav">
         <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
@@ -253,6 +262,7 @@
         <li><a href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">&copy 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
+      <div class="icon-madeby">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </div>
 </body>
