--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <!-- Not sure about keeping the primary tools bit in there, seems redundant -->
         <div class ="project">
           <a href="https://github.com/TroyAWilson/TechdegreeProjectSeven"><img src ="https://placeimg.com/350/350/tech/sepia"></a>
-          <div>
+          <div class="project-information">
             <h6>Game Show App</h6>
             <p>Hang man-like game app using Javascript</p>
             <span>Primary tools</span>
@@ -124,50 +124,58 @@
 
         <div class ="project">
           <a href="https://github.com/TroyAWilson/TechdegreeProjectSix"><img src ="https://placeimg.com/350/350/people/grayscale"></a>
-          <h6>Dynamic Video Player</h6>
-          <p>Videoe player with dynamic transcript tracking</p>
-          <span>Primary tools</span>
-          <ul>
-            <li>Javascript</li>
-            <li>HTML</li>
-            <li>CSS</li>
-          </ul>
+          <div class="project-information">
+            <h6>Dynamic Video Player</h6>
+            <p>Videoe player with dynamic transcript tracking</p>
+            <span>Primary tools</span>
+            <ul>
+              <li>Javascript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
         </div>
 <!-- Might change this one for a different project so I wont link the anchor -->
         <div class ="project">
           <img src ="https://placeimg.com/350/350/nature">
-          <h6>Interactive Photo Gallery</h6>
-          <p>Interactive photo gallery </p>
-          <span>Primary tools</span>
-          <ul>
-            <li>Javascript</li>
-            <li>HTML</li>
-            <li>CSS</li>
-          </ul>
+          <div class="project-information">
+            <h6>Interactive Photo Gallery</h6>
+            <p>Interactive photo gallery  more txt huh</p>
+            <span>Primary tools</span>
+            <ul>
+              <li>Javascript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
         </div>
 
         <div class ="project">
           <a href="https://github.com/TroyAWilson/TechdegreeProjectTen"><img src ="https://placeimg.com/350/350/arch/sepia"></a>
-          <h6>Employee Directory</h6>
-          <p>I've created a Employee directory pulling information from the something something API</p>
-          <span>Primary tools</span>
-          <ul>
-            <li>Javascript</li>
-            <li>jQuery Plugin</li>
-            <li>Something somtheing API</li>
-          </ul>
+          <div class="project-information">
+            <h6>Employee Directory</h6>
+            <p>I've created a Employee pulling information from the user API</p>
+            <span>Primary tools</span>
+            <ul>
+              <li>Javascript</li>
+              <li>jQuery Plugin</li>
+              <li>Something somtheing API</li>
+            </ul>
+          </div>
         </div>
 
         <div class ="project">
           <a href="https://github.com/TroyAWilson/techdegree-project-eleven"><img src ="https://placeimg.com/350/350/animals/sepia"></a>
+          <div class="project-information">
           <h6>ReactJS Photo Gallery</h6>
-          <p>Using the Flickr API and ReactJS I've constructed a searchable photo gallery</p>
-          <span>Primary tools</span>
-          <ul>
-            <li>Javascript</li>
-            <li>ReactJS</li>
-            <li>Flickr API</li>
-          </ul>
+            <p>Using the Flickr API and ReactJS I've constructed photo gallery</p>
+            <span>Primary tools</span>
+            <ul>
+              <li>Javascript</li>
+              <li>ReactJS</li>
+              <li>Flickr API</li>
+            </ul>
+          </div>
         </div>
 
       </div>
@@ -207,6 +215,10 @@
     <div class ="breakImage">
       <!-- I'll remove this inline code and put it into the sass file when I've put sass onto this computer  -->
       <img height ="600px" overflow="hidden" src ="images/closeupcode.jpg">
+      <div class="break-quote">
+        <p>"Mathematical science shows what is. It is the language of unseen relations between things. But to use and apply that language, we must be able fully to appreciate, to feel, to seize the unseen, the unconscious."</p>
+        <p>-Ada Lovelace</p>
+      </div>
     </div>
 
     <div id = "Pricing">
